# py-pkpass

./: .gitignore  CHANGES.txt  README.md  pyproject.toml  setup.py
.github/workflows/: on_pull_request.yml
wallet/: .exceptions.py.swp  .flake8  Pass.py  __init__.py  exceptions.py  models.py
wallet/PassInformation/: PassInformation.py  __init__.py
wallet/PassProps/: Alignment.py  Barcode.py  DateStyle.py  Field.py  IBeacon.py  Location.py  NFC.py  NumberStyle.py  TransitType.py  __init__.py
wallet/PassStyles/: BoardingPass.py  Coupon.py  EventTicket.py  Generic.py  StoreCard.py  __init__.py
wallet/Schemas/: FieldProps.py
wallet/test/: test_pass.py
